fixed button text color, alignment issues

--- a/content/static/css/style.css
+++ b/content/static/css/style.css
@@ -224,14 +224,29 @@ tt {
     line-height: 1.5em;
 }
 /*
- * Signup page
+ * Signup pages
  */
 
- .signup-button a {
-    font-family: 'Merriweather Sans', Helvetica, sans-serif;
+ a.signup-button {
     font-weight: 700;
     color: white;
  }
+
+.btn {
+    border-radius: 15px;
+    background: #fdfdfd;
+    margin-bottom: 10px;
+}
+
+.btn-danger {
+    background: #ec3b05;
+}
+
+.form-inline .btn {
+    margin-bottom: 0;
+}
+
+ /*  *  */
 
 .help-text {
     font-size: .9em;
@@ -318,16 +333,6 @@ tt {
 
 #product-comparison .checkboxes td {
     font-size: 1.8em;
-}
-
-.btn {
-    border-radius: 15px;
-    background: #fdfdfd;
-    margin-bottom: 10px;
-}
-
-.btn-danger {
-    background: #ec3b05;
 }
 
 .quickfacts {
